--- a/seminar/seminar.bib
+++ b/seminar/seminar.bib
@@ -74,6 +74,27 @@
   url =          "https://bitbashing.io/std-visit.html"
 }
 
+@misc{ commonoptimizations,
+  author =       {Andrzej Krzemieński},
+  title =        "Common optimizations",
+  year =         "2014 (accessed May 22, 2021)",
+  url =          "https://akrzemi1.wordpress.com/2014/04/14/common-optimizations/"
+}
+
+@misc{ underhoodfunction,
+  author =       {Shahar Mike},
+  title =        "Under the hood of lambdas and std::function",
+  year =         "2016 (accessed May 22, 2021)",
+  url =          "https://shaharmike.com/cpp/lambdas-and-functions/#std-function"
+}
+
+@misc{ rustmacros,
+  author =       {Anshul Goyal},
+  title =        "Macros in Rust: A tutorial with examples",
+  year =         "2021 (accessed May 23, 2021)",
+  url =          "https://blog.logrocket.com/macros-in-rust-a-tutorial-with-examples/"
+}
+
 @misc{ buildingahashmap,
   author =       {Alexis Beingessner},
   title =        "{Building a HashMap in Rust - Part 1: What's a HashMap?}",
