--- a/seminar/abstract.tex
+++ b/seminar/abstract.tex
@@ -11,6 +11,6 @@ comparing the languages in their ability to be used as a tool to write medium
 to large \textit{system programs}. As a case study, we will be discussing two
 implementations of a complete ICCCM\cite{icccm} and EWMH\cite{ewmh} compliant
 top-level reparenting, tiling window manager, built on top of the X Window
-System\cite{x11}: one written in Rust, and the other in \cpp.
+System\cite{x11}: one written in Rust\cite{wzrd}, and the other in \cpp.
 
 \end{abstract}
