--- a/seminar/seminar.bib
+++ b/seminar/seminar.bib
@@ -110,6 +110,14 @@
   url =          "https://alschwalm.com/blog/static/2017/03/07/exploring-dynamic-dispatch-in-rust/"
 }
 
+@misc { wzrd,
+  author =       {Max van Deurzen},
+  title =        "{wzrd: An ICCCM \& EWMH compliant X11 (XCB) reparenting, dynamic window manager, written in Rust}",
+  date =         {25 May},
+  year =         "2021 (accessed May 25, 2021)",
+  url =          "https://github.com/deurzen/wzrd"
+}
+
 @Book{ therustbook,
   author =       "Steve Klabnik and Carol Nichols",
   title =        "The {Rust} Programming Language",
