--- a/seminar/input_bindings.tex
+++ b/seminar/input_bindings.tex
@@ -226,7 +226,7 @@ logic looks somewhat as follows:
 Population of and retrieval from \textsc{wmRS}'s \rsin{KeyBindings}
 \rsin{HashMap} is done in similar fashion.
 
-\cppsubsection{std::function and std::unordered\_map}
+\cppsubsection{Bindings with std::function and std::unordered\_map}
 
 To achieve an analogous mouse and key binding setup in \textsc{wmCPP}, we
 first create \cpp{}-equivalent scoped enumerations (\cppin{enum class}) for
