--- a/seminar/seminar.tex
+++ b/seminar/seminar.tex
@@ -62,8 +62,8 @@
 	\mintinline{#1}{#2}%
 }
 
-\newmintinline[rsin]{rust}{fontsize=\small}
-\newmintinline[cppin]{cpp}{fontsize=\small}
+\newmintinline[rsin]{rust}{escapeinside=||,autogobble,fontsize=\small}
+\newmintinline[cppin]{cpp}{escapeinside=||,autogobble,fontsize=\small}
 
 \newcommand{\ttt}[1]{{\small\texttt{#1}}}
 
