--- a/seminar/clients.tex
+++ b/seminar/clients.tex
@@ -11,19 +11,20 @@ what exactly it is to entail. In both \textsc{wmRS} and \textsc{wmCPP}, a
 \texttt{Window} is a unique identifier (e.g., a \rsin{usize}) for a window that,
 again, maps windowing system specific representations to an abstraction that is
 to be used within the window manager. A window in and of itself therefore does
-not contain any \textit{state}. To associate state with a window, we wrap it in
-a structure that we call a \textit{client}. Clients are objects that contain all
-relevant information about a window: its title, position and size on-screen,
-process identifier, whether it is in the fullscreen state, and much more.
+not contain any \textit{state}. To associate state with a window, we wrap around
+it a structure that we call a \textit{client}. Clients are objects that contain
+all relevant information about a window: its title, position and size on-screen,
+process identifier, whether it is in fullscreen mode, and much more.
 
 \rssubsection{Mutable State with Cell and RefCell}
 
-So far, we have deferred discussing a major aspect of the Rust programming
+We have thus far deferred discussing a major aspect of the Rust programming
 language: \textit{mutability}. Rust's \rsin{mut} keyword carries two kinds
 of semantics, depending on where it is used. In patterns, \rsin{mut} indeed
-indicates that mutating is allowed. In references, however, it rather pertains
-to \textit{exclusivity}. That is, a \rsin{&mut} reference is not allowed to be
-\textit{aliased}. Consider part of \textsc{wmRS}'s \rsin{Client} structure:
+indicates that changing the underlying value is allowed. In references, however,
+it rather pertains to \textit{exclusivity}. That is, a \rsin{&mut} reference
+is not allowed to be \textit{aliased}. Consider part of \textsc{wmRS}'s
+\rsin{Client} structure:
 
 \begin{rustblock}
   pub struct Client {
@@ -39,13 +40,15 @@ to \textit{exclusivity}. That is, a \rsin{&mut} reference is not allowed to be
 
 We want to pass around references to instances of this structure throughout
 the \rsin{Model}, to read and alter state, and make window management
-decisions accordingly. One possibility would be to have the different
+decisions accordingly. Disregarding the concrete contents of the \rsin{Client}
+structure for a moment, one possibility would be to have the different
 client-mutating methods that are part of the \rsin{Model} take as parameter
 a \rsin{&mut Client}. While this is a plausible approach, it heavily limits
 us in using and passing around references. In concreto, no more than a single
 reference to a to-be-changed \rsin{Client} may exist at a time. This is
 particularly troublesome, as we need to store \rsin{Client} instances within the
-\rsin{Model}, as follows:
+\rsin{Model}, mapping window representations to their associated \rsin{Client}
+structure, as follows:
 
 \begin{rustblock}
   pub struct Model<'model> {
@@ -55,11 +58,13 @@ particularly troublesome, as we need to store \rsin{Client} instances within the
 \end{rustblock}
 
 Since mutability transitively affects all surrounding structures, mutating a
-single field within a \rsin{Client} instance means that that instance would have
-to be \rsin{&mut}. This additionally requires that the \rsin{Model}'s method
-that retrieves and operates on such an instance would \textit{also} have to
-take \rsin{&mut self}. As a result, something like the following would not be
-possible:
+single field within a \rsin{Client} instance means that the reference to that
+instance would have to be \rsin{&mut}. This additionally requires that the
+\rsin{Model}'s method that retrieves and operates on such an instance would
+\textit{also} have to take \rsin{&mut self}. For this reason, this kind of
+mutability is what's known in Rust as \textit{inherited} mutability, also
+referred to as \textit{external} mutability. A result of this, is that something
+like the following would not be possible:
 
 \begin{rustblock}
   impl<'model> Model<'model> {
@@ -71,22 +76,32 @@ possible:
 \end{rustblock}
 \begin{rustblock}
     fn set_fullscreen_client(&self, cli: &mut Client) {
+      self.conn.set_window_state(cli.window(),
+        WindowState::Fullscreen, true);
       cli.set_fullscreen(true);
     }
     // ...
   }
 \end{rustblock}
 
-Even though \rsin{set_fullscreen_client} can be called on a non-exclusive
-reference to the model (i.e. it takes \rsin{&self}), the above will not compile,
-as an immutable borrow of \rsin{self} occurs after a mutable one inside
+Even though \rsin{set_fullscreen_client} can be called on a
+non-exclusive reference to the model (i.e. it takes \rsin{&self}),
+the above will not compile: An immutable borrow of \rsin{self}
+(\rsin{|\bfseries{self}|.set_fullscreen_client(c)}) occurs \textit{after}
+a mutable one (\rsin{|\bfseries{self}|.client_map.get_mut(&win)}) inside
 \rsin{set_fullscreen_window}, which is not allowed due to the exclusivity rules
-discussed above.
+discussed before.
 
-Moreover, it is rarely the
-case that more than a single field of a \rsin{Client} instance is mutated.
-The \rsin{set_fullscreen_client} method will only change the value of the
-\rsin{fullscreen} field, for instance.
+To solve this, we use a technique called \textit{internal mutability}.
+Every method that operates on a client has a structure analogous to the
+\rsin{set_fullscreen_window} method. The reason for this is that the windowing
+system generates events in respect to some \textit{window}. To be able to alter
+state, we must therefore subsequently retrieve the \textit{client} that is
+associated with that window.
+
+Moreover, it is rarely the case that more than a single field of a
+\rsin{Client} instance is mutated at a time. The \rsin{set_fullscreen_client}
+method will only change the value of the \rsin{fullscreen} field, for instance.
 
 Furthermore, two types of mutability exist: \textit{interior}
 and \textit{exterior} mutability. Part of \textsc{wmRS}'s client structure looks
